Fixed text overflow for card details on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,10 @@ html, body {
   border-radius: 20px;
 }
 
+.full-img {
+  object-fit: contain;
+}
+
 .link {
   background-color: rgba(102, 255, 51, 0.7);
 }
@@ -65,6 +69,7 @@ html, body {
 
   .content {
     font-size: 16px;
+    word-wrap: break-word;
   }
 
   .App {
